--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,15 @@
 <!-- Напишите решение сюда -->
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
+        <meta charset="utf-8">
+        <title>Тестовая страница</title>
+    </head>
+    <body>
+        <main>
+        <section>
+            <h1>Hello World</h1>
+        </section>
+        </main>
+    </body>
+</html>
