Accordion done and button additional changes

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,13 +6,17 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details>
-            <summary>
-                Accordion item
-            </summary>
-            <p>
-                Hidden content
-            </p>
+        <details class="accordion__item">
+            <summary class="accordion__summary">  Accordion item 1 </summary>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, voluptatem.</p>
+        </details>
+        <details class="accordion__item">
+            <summary class="accordion__summary">  Accordion item 2 </summary>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum numquam id tempore quidem in. Impedit.</p>
+        </details>
+        <details class="accordion__item">
+            <summary class="accordion__summary">  Accordion item 3 </summary>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem rem dolorem possimus magnam molestiae placeat delectus tempora est architecto perferendis.</p>
         </details>
     </body>
 </html>
