--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <!-- Главная страница -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="./assets/css/main.css">
-        <title>Reusable component library</title>
-    </head>
-    <body>
-        <header>
-            <div class="page__container">
-                <h1 class="header__title">Reusable component library</h1>
-            </div>
-        </header>
-        <main>
 
-        </main>
-        <footer>
-            <div class="page__container">
-                <h2 class="footer_title">About</h2>
-                <p class="footer__paragraph">This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.</p>
-            </div>
-        </footer>
-    </body>
+<head>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <title>Reusable component library</title>
+</head>
+
+<body>
+    <header>
+        <div>
+            <h1 class="header__title">Reusable component library</h1>
+        </div>
+    </header>
+    <main>
+        <section class="card_preview">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </section>
+        <button class="button__alternate button_preview">Load more</button>
+    </main>
+    <footer>
+        <div class="footer">
+            <h2 class="heading__footer">About</h2>
+            <p>This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
+                can drop into your projects. Get started by checking out our free preview components, or browsing the
+                PNG previews in the categories you're most curious about.</p>
+        </div>
+    </footer>
+</body>
+
 </html>
