--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -6,6 +6,48 @@
         <link rel="stylesheet" href="./histogram.css">
     </head>
     <body>
-
+        <div class="histogram">
+            <div class="histogram__top">
+                <div class="histogram__p1">Total orders</div>
+                <div class="histogram__p2">View all</div>
+            </div>
+            <div class="histogram__middle">
+                <h4>50254</h4>
+            </div>
+            <div class="histogram__bottom">
+                <div class="histogram__graph">
+                    <div class="histogram__bar histogram__bar-1"></div>
+                    <div class="histogram__bar histogram__bar-2"></div>
+                    <div class="histogram__bar histogram__bar-3"></div>
+                    <div class="histogram__bar histogram__bar-4"></div>
+                    <div class="histogram__bar histogram__bar-5"></div>
+                    <div class="histogram__bar histogram__bar-6"></div>
+                    <div class="histogram__bar histogram__bar-7"></div>
+                    <div class="histogram__bar histogram__bar-8"></div>
+                    <div class="histogram__bar histogram__bar-9"></div>
+                    <div class="histogram__bar histogram__bar-10"></div>
+                    <div class="histogram__bar histogram__bar-11"></div>
+                    <div class="histogram__bar histogram__bar-12"></div>
+                    <div class="histogram__bar histogram__bar-13"></div>
+                    <div class="histogram__bar histogram__bar-14"></div>
+                    <div class="histogram__bar histogram__bar-15"></div>
+                    <div class="histogram__bar histogram__bar-16"></div>
+                    <div class="histogram__bar histogram__bar-17"></div>
+                    <div class="histogram__bar histogram__bar-18"></div>
+                    <div class="histogram__bar histogram__bar-19"></div>
+                    <div class="histogram__bar histogram__bar-20"></div>
+                    <div class="histogram__bar histogram__bar-21"></div>
+                    <div class="histogram__bar histogram__bar-22"></div>
+                    <div class="histogram__bar histogram__bar-23"></div>
+                    <div class="histogram__bar histogram__bar-24"></div>
+                    <div class="histogram__bar histogram__bar-25"></div>
+                    <div class="histogram__bar histogram__bar-26"></div>
+                    <div class="histogram__bar histogram__bar-27"></div>
+                    <div class="histogram__bar histogram__bar-28"></div>
+                    <div class="histogram__bar histogram__bar-29"></div>
+                    <div class="histogram__bar histogram__bar-30"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
