--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -6,6 +6,35 @@
         <link rel="stylesheet" href="./checkbox.css">
     </head>
     <body>
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox" disabled> 
+            <div class="checkbox__control"> 
+                <svg class="checkbox__icon-checked" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            </div>
+            <span class="checkbox__label">Checked</span>
+        </label>
+
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox" > 
+            <div class="checkbox__control" tabindex="1"> 
+                <svg class="checkbox__icon-checked" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            </div>
+            <span class="checkbox__label">Checked</span>
+        </label>
+
+        <label class="checkbox">
+            <input class="checkbox__input" type="checkbox" > 
+            <div class="checkbox__control" tabindex="2"> 
+                <svg class="checkbox__icon-checked" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            </div>
+            <span class="checkbox__label">Checked</span>
+        </label>
 
     </body>
 </html>
