--- a/07-lection5/03-toggler/index.html
+++ b/07-lection5/03-toggler/index.html
@@ -6,6 +6,20 @@
         <link rel="stylesheet" href="./toggler.css">
     </head>
     <body>
+        <label class="toggler">
+            <input class="toggler__input" type="checkbox">
+            <div class="toggler__control">
+                <div class="toggler__icon-checked"></div>
+            </div>
+            <span class="toggler__legend">Toggler</span>
+        </label>
 
+        <label class="toggler">
+            <input class="toggler__input" type="checkbox" disabled>
+            <div class="toggler__control">
+                <div class="toggler__icon-checked"></div>
+            </div>
+            <span class="toggler__legend">Disabled</span>
+        </label>
     </body>
 </html>
