--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <h1>Hello World</h1>>
+    <!DOCTYPE html>
+    <html lang="ru">
+        <head>
+            <link rel="stylesheet" href=css/style.css>
+            <meta charset="utf-8">
+            <title>Семантическая разметка страницы. Домашнее задание номер 2.</title>
+        </head>
+        <header>
+            <h1>Header</h1>
+            <nav>
+                <a href="#">Navigation 1</a>
+                <a href="#">Navigation 2</a>
+                <a href="#">Navigation 3</a>
+            </nav>
+        </header>
+        <body>
+                <main>
+                    <section>
+                        <article>
+                                <h2>Article 1</h2>
+                                    <ul>
+                                        <li>Оригинальная трилогия;</li>
+                                        <li>Трилогия приквелов;</li>
+                                        <li>Трилогия сиквелов;</li>
+                                    </ul>
+                        </article>
+                        <article>
+                                <h2>Article 2</h2>
+                                    <ol>
+                                        <li>Эпизод IV - Новая надежда;</li>
+                                        <li>Эпизод V - Империя наносит ответный удар;</li>
+                                        <li>Эпизод VI - Возвращение джедая;</li>
+                                    </ol>
+                        </article>
+                    </section>
+                </main>
+                <footer>
+                    <h3>Footer</h3>
+                </footer>
+        </body>
+    </html>
+    
 </html>
