--- a/07-lection5/02-radio/index.html
+++ b/07-lection5/02-radio/index.html
@@ -6,6 +6,28 @@
         <link rel="stylesheet" href="./radio.css">
     </head>
     <body>
+        <label class="radio">
+            <input name="1" class="radio__input" type="radio">
+            <div class="radio__control" tabindex="1">
+                <div class="radio__icon-checked"></div>
+            </div>
+            <span class="radio__legend">Default</span>
+        </label>
 
+        <label class="radio">
+            <input name="1" class="radio__input" type="radio">
+            <div class="radio__control" tabindex="2">
+                <div class="radio__icon-checked"></div>
+            </div>
+            <span class="radio__legend">Default</span>
+        </label>
+
+        <label class="radio">
+            <input name="1" class="radio__input" type="radio" disabled>
+            <div class="radio__control" tabindex="3">
+                <div class="radio__icon-checked"></div>
+            </div>
+            <span class="radio__legend">Default</span>
+        </label>
     </body>
 </html>
