--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-    <button class="button__primary">Primary</button>
-    <button class="button__primary" disabled>Primary disabled</button>
-    <button class="button__secondary">Secondary</button>
-    <button class="button__secondary" disabled>Secondary disabled</button>
-    <button class="button__alternate">Alternate</button>
-    <button class="button__alternate" disabled>Alternate disabled</button>
+    <button class="button button__primary">Primary</button>
+    <button class="button button__primary" disabled>Primary disabled</button>
+    <button class="button button__secondary">Secondary</button>
+    <button class="button button__secondary" disabled>Secondary disabled</button>
+    <button class="button button__alternate">Alternate</button>
+    <button class="button button__alternate" disabled>Alternate disabled</button>
     </body>
 </html>
