--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,17 +6,41 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details class="accordion__item">
-            <summary class="accordion__summary">  Accordion item 1 </summary>
+        <details class="accordion">
+            <summary class="accordion__summary">
+                <div class="accordion__heading">
+                    <span>Accordion item 3</span>
+                    <svg class="accordion__icon" width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17 9L9 1L1 9" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> 
+                </div>
+            </summary>    
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, voluptatem.</p>
         </details>
-        <details class="accordion__item">
-            <summary class="accordion__summary">  Accordion item 2 </summary>
+
+        <details class="accordion">
+            <summary class="accordion__summary">
+                <div class="accordion__heading">
+                    <span>Accordion item 3</span>
+                    <svg class="accordion__icon" width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17 9L9 1L1 9" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> 
+                </div>
+            </summary>    
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum numquam id tempore quidem in. Impedit.</p>
         </details>
-        <details class="accordion__item">
-            <summary class="accordion__summary">  Accordion item 3 </summary>
+
+        <details class="accordion">
+            <summary class="accordion__summary">
+                <div class="accordion__heading">
+                    <span>Accordion item 3</span>
+                    <svg class="accordion__icon" width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17 9L9 1L1 9" stroke="#495057" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg> 
+                </div>
+            </summary>         
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem rem dolorem possimus magnam molestiae placeat delectus tempora est architecto perferendis.</p>
         </details>
+
     </body>
 </html>
