--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details class="accordion">
+        <details class="accordion accordion_preview">
             <summary class="accordion__summary">
                 <div class="accordion__heading">
                     <span>Accordion item 3</span>
@@ -15,10 +15,10 @@
                     </svg> 
                 </div>
             </summary>    
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, voluptatem.</p>
+            <p class="accordion__text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, voluptatem.</p>
         </details>
 
-        <details class="accordion">
+        <details class="accordion accordion_preview">
             <summary class="accordion__summary">
                 <div class="accordion__heading">
                     <span>Accordion item 3</span>
@@ -27,10 +27,10 @@
                     </svg> 
                 </div>
             </summary>    
-            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum numquam id tempore quidem in. Impedit.</p>
+            <p class="accordion__text"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum numquam id tempore quidem in. Impedit.</p>
         </details>
 
-        <details class="accordion">
+        <details class="accordion accordion_preview">
             <summary class="accordion__summary">
                 <div class="accordion__heading">
                     <span>Accordion item 3</span>
@@ -39,7 +39,7 @@
                     </svg> 
                 </div>
             </summary>         
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem rem dolorem possimus magnam molestiae placeat delectus tempora est architecto perferendis.</p>
+            <p class="accordion__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem rem dolorem possimus magnam molestiae placeat delectus tempora est architecto perferendis.</p>
         </details>
 
     </body>
