Updated files and code

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -8,11 +8,11 @@
     <body>
         <div class="histogram">
             <div class="histogram__top">
-                <div class="histogram__p1">Total orders</div>
-                <div class="histogram__p2">View all</div>
+                <span class="histogram__p1">Total orders</span>>
+                <span class="histogram__p2">View all</span>
             </div>
             <div class="histogram__middle">
-                <h4>50254</h4>
+                <span class="histogram__p3">50254</span>
             </div>
             <div class="histogram__bottom">
                 <div class="histogram__graph">
