--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -11,12 +11,12 @@
                     <div class="skeleton__avatar"></div>
                         <div class="skeleton__title">
                             <div class="skeleton__line"></div>
-                            <div class="skeleton__line skeleton__line-w257"></div>
+                            <div class="skeleton__line skeleton__line_w257"></div>
                         </div>
             </div>
             <div class="skeleton__buttom">
-                <div class="skeleton__line skeleton__line-w100p"></div>
-                <div class="skeleton__line skeleton__line-w100p"></div>
+                <div class="skeleton__line skeleton__line_w100p"></div>
+                <div class="skeleton__line skeleton__line_w100p"></div>
             </div>
         </div>
     </body>
