Fixed width and modificators name

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -10,13 +10,13 @@
             <div class="skeleton__header">
                     <div class="skeleton__avatar"></div>
                         <div class="skeleton__title">
+                            <div class="skeleton__line skeleton__line_short"></div>
                             <div class="skeleton__line"></div>
-                            <div class="skeleton__line skeleton__line_w257"></div>
                         </div>
             </div>
             <div class="skeleton__buttom">
-                <div class="skeleton__line skeleton__line_w100p"></div>
-                <div class="skeleton__line skeleton__line_w100p"></div>
+                <div class="skeleton__line"></div>
+                <div class="skeleton__line"></div>
             </div>
         </div>
     </body>
