--- a/05-lection3/02-modal/index.html
+++ b/05-lection3/02-modal/index.html
@@ -2,12 +2,12 @@
 <!-- Страница с модалкой -->
 <html lang="ru">
     <head>
-     <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="../../assets/css/main.css">
         <link rel="stylesheet" href="./modal.css">
         <title>Modal</title>
     </head>
     <body>
-        <button class="button__primary" id="modal-open">Open Modal</button>
+        <button class="button button_primary" id="modal-open">Open Modal</button>
         <div class="modal" id="modal">
             <div class="modal__content">
                 <div class="modal__closeicon">
