Fixed Main page and Components page

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="histogram">
             <div class="histogram__top">
-                <span class="histogram__p1">Total orders</span>>
+                <span class="histogram__p1">Total orders</span>
                 <span class="histogram__p2">View all</span>
             </div>
             <div class="histogram__middle">
