--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="card"></div>
                         <div class="card"></div>
                     </section>
-                        <button class="button__alternate button__preview">Load more</button>
+                        <button class="button button_alternate">Load more</button>
                         </main>
                 <footer>
                         <div class="footer">
