--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
 
     <body>
-        <div class="main__container">
+        <!--<div class="main__container">-->
             <header>
-                <div>
+                <div class="wrapper">
                     <h1 class="header__title">Reusable component library</h1>
                 </div>
             </header>
-                <main>
-                    <section class="card_preview">
+                <main class="wrapper">
+                    <section class="preview">
                         <div class="card"></div>
                         <div class="card"></div>
                         <div class="card"></div>
@@ -22,16 +22,20 @@
                         <div class="card"></div>
                         <div class="card"></div>
                     </section>
+                    <section class="loadmore__container">
                         <button class="button button_alternate">Load more</button>
-                        </main>
+                    </section>
+                </main>
                 <footer>
-                        <div class="footer">
-                            <h2 class="heading__footer">About</h2>
-                            <p>This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
+                        <div class="wrapper footer">
+                            <div class="footer__wrapper">
+                                <h2 class="heading__footer">About</h2>
+                                <p>This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
                                 can drop into your projects. Get started by checking out our free preview components, or browsing the
                                 PNG previews in the categories you're most curious about.</p>
+                            </div>
                         </div>
                 </footer>
-        </div>
+        <!--</div>-->
     </body>
 </html>
