Fixed issues after check

--- a/pages/component.html
+++ b/pages/component.html
@@ -8,7 +8,7 @@
         <header class="componentspage__header">
 
         </header>
-        <div class="main__container-component">
+        <div class="componentspage__wrapper">
             <main class="componentspage__main">
                 <div class="componentspage__sidemenu">
                 <h4 class="componentspage__menuheading">Components</h4>
