--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <!--<div class="main__container">-->
-            <header>
+            <header class="header">
                 <div class="wrapper">
                     <h1 class="header__title">Reusable component library</h1>
                 </div>
@@ -29,7 +29,7 @@
                 <footer>
                         <div class="wrapper footer">
                             <div class="footer__wrapper">
-                                <h2 class="heading__footer">About</h2>
+                                <h2 class="footer__heading">About</h2>
                                 <p>This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you
                                 can drop into your projects. Get started by checking out our free preview components, or browsing the
                                 PNG previews in the categories you're most curious about.</p>
